Update .gitignore to exclude dataset files with .csv extension from uploading

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore the InfluxDB configuration file containing sensitive credentials
 influxdb_config.json
 influxExport.py
+# Ignore dataset files .csv
+*.csv
 
 # Python bytecode
 __pycache__/
