feat: Add Labeling Event Scripts - Implemented run_event_labeler.py to launch the event labeling tool. - Organized project structure folders and main script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore the InfluxDB configuration file containing sensitive credentials
 influxdb_config.json
-influxExport.py
+config/influxdb_config.json
+
 # Ignore dataset files .csv
 *.csv
 
@@ -23,6 +24,7 @@ build/
 # macOS system files
 .DS_Store
 .png
+
 # Editor directories and files
 .idea/
 .vscode/
