--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas>=1.0.0
-influxdb-client>=1.30.0
-pytz>=2021.1
-numpy>=1.20.0
-scikit-learn>=0.24.0
-matplotlib>=3.3.0
+pandas
+influxdb-client
+pytz
+matplotlib
+scikit-learn
+numpy
+Flask
 seaborn>=0.11.0
